@@ -191,28 +191,24 @@ and when to execute the Scenes.
 {
 	EAGLView	*openGLView_;
 
-	NSBundle* loadingBundle;
-
 	// internal timer
-	NSTimeInterval animationInterval;
-	NSTimeInterval oldAnimationInterval;
+	NSTimeInterval animationInterval_;
+	NSTimeInterval oldAnimationInterval_;
 
 	tPixelFormat pixelFormat_;
 	tDepthBufferFormat depthBufferFormat_;
-
-	/* landscape mode ? */
-	BOOL landscape;
 	
 	/* orientation */
 	ccDeviceOrientation	deviceOrientation_;
 	
 	/* display FPS ? */
-	BOOL displayFPS;
-	int frames;
-	ccTime accumDt;
-	ccTime frameRate;
+	BOOL displayFPS_;
+
+	int frames_;
+	ccTime accumDt_;
+	ccTime frameRate_;
 #if	CC_DIRECTOR_FAST_FPS
-	CCLabelAtlas *FPSLabel;
+	CCLabelAtlas *FPSLabel_;
 #endif
 	
 	/* is the running scene paused */
@@ -232,7 +228,7 @@ and when to execute the Scenes.
 	NSMutableArray *scenesStack_;
 	
 	/* last time the main loop was updated */
-	struct timeval lastUpdate;
+	struct timeval lastUpdate_;
 	/* delta time since last tick to main loop */
 	ccTime dt;
 	/* whether or not the next delta time will be zero */
@@ -254,7 +250,7 @@ and when to execute the Scenes.
 	BOOL	isContentScaleSupported_;
 
 #if CC_ENABLE_PROFILERS
-	ccTime accumDtForProfiler;
+	ccTime accumDtForProfiler_;
 #endif
 }
 
@@ -437,8 +433,10 @@ and when to execute the Scenes.
  */
 -(void) startAnimation;
 
-/* main loop */
--(void) mainLoop;
+/** Draw the scene.
+ This method is called every frame. Don't call it manually.
+ */
+-(void) drawScene;
 
 // Memory Helper
 
